parser/grammar/NavSParser.cpp

// Generated from NavSParser.g4 by ANTLR 4.9.2


#include "NavSParserListener.h"

#include "NavSParser.h"


    #include "global.h"


using namespace antlrcpp;
using namespace antlr4;

NavSParser::NavSParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

NavSParser::~NavSParser() {
  delete _interpreter;
}

std::string NavSParser::getGrammarFileName() const {
  return "NavSParser.g4";
}

const std::vector<std::string>& NavSParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& NavSParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- CompilationUnitContext ------------------------------------------------------------------

NavSParser::CompilationUnitContext::CompilationUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NavSParser::CompilationUnitContext::EOF() {
  return getToken(NavSParser::EOF, 0);
}

std::vector<NavSParser::PilotDefContext *> NavSParser::CompilationUnitContext::pilotDef() {
  return getRuleContexts<NavSParser::PilotDefContext>();
}

NavSParser::PilotDefContext* NavSParser::CompilationUnitContext::pilotDef(size_t i) {
  return getRuleContext<NavSParser::PilotDefContext>(i);
}


size_t NavSParser::CompilationUnitContext::getRuleIndex() const {
  return NavSParser::RuleCompilationUnit;
}

void NavSParser::CompilationUnitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NavSParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCompilationUnit(this);
}

void NavSParser::CompilationUnitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NavSParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCompilationUnit(this);
}

NavSParser::CompilationUnitContext* NavSParser::compilationUnit() {
  CompilationUnitContext *_localctx = _tracker.createInstance<CompilationUnitContext>(_ctx, getState());
  enterRule(_localctx, 0, NavSParser::RuleCompilationUnit);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(31);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == NavSParser::IDENTIFIER) {
      setState(28);
      pilotDef();
      setState(33);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(34);
    match(NavSParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDefContext ------------------------------------------------------------------

NavSParser::VarDefContext::VarDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NavSParser::VarDefContext::IDENTIFIER() {
  return getToken(NavSParser::IDENTIFIER, 0);
}

tree::TerminalNode* NavSParser::VarDefContext::SEMI() {
  return getToken(NavSParser::SEMI, 0);
}

tree::TerminalNode* NavSParser::VarDefContext::ASSIGN() {
  return getToken(NavSParser::ASSIGN, 0);
}

NavSParser::LiteralContext* NavSParser::VarDefContext::literal() {
  return getRuleContext<NavSParser::LiteralContext>(0);
}


size_t NavSParser::VarDefContext::getRuleIndex() const {
  return NavSParser::RuleVarDef;
}

void NavSParser::VarDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NavSParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarDef(this);
}

void NavSParser::VarDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NavSParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarDef(this);
}

NavSParser::VarDefContext* NavSParser::varDef() {
  VarDefContext *_localctx = _tracker.createInstance<VarDefContext>(_ctx, getState());
  enterRule(_localctx, 2, NavSParser::RuleVarDef);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(36);
    match(NavSParser::IDENTIFIER);
    string tval = "null";

    setState(38);
    match(NavSParser::ASSIGN);
    setState(39);
    dynamic_cast<VarDefContext *>(_localctx)->literalContext = literal();
    tval = (dynamic_cast<VarDefContext *>(_localctx)->literalContext != nullptr ? _input->getText(dynamic_cast<VarDefContext *>(_localctx)->literalContext->start, dynamic_cast<VarDefContext *>(_localctx)->literalContext->stop) : nullptr);
    setState(42);
    match(NavSParser::SEMI);

            vars[cur_stub]["halt"] = "False";
            vars[cur_stub]["prior"] = "65536";
            vars[cur_stub]["cons"] = "True";
        
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PilotDefContext ------------------------------------------------------------------

NavSParser::PilotDefContext::PilotDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NavSParser::PilotDefContext::IDENTIFIER() {
  return getToken(NavSParser::IDENTIFIER, 0);
}

NavSParser::AdviceListContext* NavSParser::PilotDefContext::adviceList() {
  return getRuleContext<NavSParser::AdviceListContext>(0);
}

tree::TerminalNode* NavSParser::PilotDefContext::COLON() {
  return getToken(NavSParser::COLON, 0);
}

NavSParser::LocEContext* NavSParser::PilotDefContext::locE() {
  return getRuleContext<NavSParser::LocEContext>(0);
}


size_t NavSParser::PilotDefContext::getRuleIndex() const {
  return NavSParser::RulePilotDef;
}

void NavSParser::PilotDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NavSParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPilotDef(this);
}

void NavSParser::PilotDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NavSParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPilotDef(this);
}

NavSParser::PilotDefContext* NavSParser::pilotDef() {
  PilotDefContext *_localctx = _tracker.createInstance<PilotDefContext>(_ctx, getState());
  enterRule(_localctx, 4, NavSParser::RulePilotDef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45);
    dynamic_cast<PilotDefContext *>(_localctx)->identifierToken = match(NavSParser::IDENTIFIER);

            cur_stub = (dynamic_cast<PilotDefContext *>(_localctx)->identifierToken != nullptr ? dynamic_cast<PilotDefContext *>(_localctx)->identifierToken->getText() : "");
        
    setState(51);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == NavSParser::COLON) {
      setState(47);
      match(NavSParser::COLON);
      setState(48);
      dynamic_cast<PilotDefContext *>(_localctx)->l = locE(0);

              conds[cur_stub] = dynamic_cast<PilotDefContext *>(_localctx)->l->e_;
          
    }
    setState(53);
    adviceList();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AdviceListContext ------------------------------------------------------------------

NavSParser::AdviceListContext::AdviceListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NavSParser::AdviceListContext::LBRACE() {
  return getToken(NavSParser::LBRACE, 0);
}

tree::TerminalNode* NavSParser::AdviceListContext::RBRACE() {
  return getToken(NavSParser::RBRACE, 0);
}

std::vector<NavSParser::VarDefContext *> NavSParser::AdviceListContext::varDef() {
  return getRuleContexts<NavSParser::VarDefContext>();
}

NavSParser::VarDefContext* NavSParser::AdviceListContext::varDef(size_t i) {
  return getRuleContext<NavSParser::VarDefContext>(i);
}

std::vector<tree::TerminalNode *> NavSParser::AdviceListContext::POST() {
  return getTokens(NavSParser::POST);
}

tree::TerminalNode* NavSParser::AdviceListContext::POST(size_t i) {
  return getToken(NavSParser::POST, i);
}

std::vector<NavSParser::AdviceDefContext *> NavSParser::AdviceListContext::adviceDef() {
  return getRuleContexts<NavSParser::AdviceDefContext>();
}

NavSParser::AdviceDefContext* NavSParser::AdviceListContext::adviceDef(size_t i) {
  return getRuleContext<NavSParser::AdviceDefContext>(i);
}

std::vector<tree::TerminalNode *> NavSParser::AdviceListContext::PRE() {
  return getTokens(NavSParser::PRE);
}

tree::TerminalNode* NavSParser::AdviceListContext::PRE(size_t i) {
  return getToken(NavSParser::PRE, i);
}


size_t NavSParser::AdviceListContext::getRuleIndex() const {
  return NavSParser::RuleAdviceList;
}

void NavSParser::AdviceListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NavSParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAdviceList(this);
}

void NavSParser::AdviceListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NavSParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAdviceList(this);
}

NavSParser::AdviceListContext* NavSParser::adviceList() {
  AdviceListContext *_localctx = _tracker.createInstance<AdviceListContext>(_ctx, getState());
  enterRule(_localctx, 6, NavSParser::RuleAdviceList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(55);
    match(NavSParser::LBRACE);
     counter = 0, postcounter = -1; 
    setState(71);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << NavSParser::FUNC)
      | (1ULL << NavSParser::DEF)
      | (1ULL << NavSParser::AUSE)
      | (1ULL << NavSParser::PUSE)
      | (1ULL << NavSParser::CUSE)
      | (1ULL << NavSParser::OUSE)
      | (1ULL << NavSParser::LUSE)
      | (1ULL << NavSParser::CALL)
      | (1ULL << NavSParser::NOT)
      | (1ULL << NavSParser::PRE)
      | (1ULL << NavSParser::POST)
      | (1ULL << NavSParser::IDENTIFIER))) != 0)) {
      setState(69);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case NavSParser::IDENTIFIER: {
          setState(57);
          varDef();
          break;
        }

        case NavSParser::FUNC:
        case NavSParser::DEF:
        case NavSParser::AUSE:
        case NavSParser::PUSE:
        case NavSParser::CUSE:
        case NavSParser::OUSE:
        case NavSParser::LUSE:
        case NavSParser::CALL:
        case NavSParser::NOT:
        case NavSParser::PRE: {
          setState(61);
          _errHandler->sync(this);
          switch (_input->LA(1)) {
            case NavSParser::FUNC:
            case NavSParser::DEF:
            case NavSParser::AUSE:
            case NavSParser::PUSE:
            case NavSParser::CUSE:
            case NavSParser::OUSE:
            case NavSParser::LUSE:
            case NavSParser::CALL:
            case NavSParser::NOT: {
              setState(58);
              dynamic_cast<AdviceListContext *>(_localctx)->adviceDefContext = adviceDef();
              break;
            }

            case NavSParser::PRE: {
              setState(59);
              match(NavSParser::PRE);
              setState(60);
              dynamic_cast<AdviceListContext *>(_localctx)->adviceDefContext = adviceDef();
              break;
            }

          default:
            throw NoViableAltException(this);
          }

                  advs[cur_stub][counter] = dynamic_cast<AdviceListContext *>(_localctx)->adviceDefContext->a;
                  counter++;
              
          break;
        }

        case NavSParser::POST: {
          setState(65);
          match(NavSParser::POST);
          setState(66);
          dynamic_cast<AdviceListContext *>(_localctx)->adviceDefContext = adviceDef();

                  advs[cur_stub][postcounter] = dynamic_cast<AdviceListContext *>(_localctx)->adviceDefContext->a;
                  postcounter--;
              
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(73);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(74);
    match(NavSParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AdviceDefContext ------------------------------------------------------------------

NavSParser::AdviceDefContext::AdviceDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NavSParser::LocEContext* NavSParser::AdviceDefContext::locE() {
  return getRuleContext<NavSParser::LocEContext>(0);
}

tree::TerminalNode* NavSParser::AdviceDefContext::LBRACE() {
  return getToken(NavSParser::LBRACE, 0);
}

NavSParser::StmtListContext* NavSParser::AdviceDefContext::stmtList() {
  return getRuleContext<NavSParser::StmtListContext>(0);
}

tree::TerminalNode* NavSParser::AdviceDefContext::RBRACE() {
  return getToken(NavSParser::RBRACE, 0);
}


size_t NavSParser::AdviceDefContext::getRuleIndex() const {
  return NavSParser::RuleAdviceDef;
}

void NavSParser::AdviceDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NavSParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAdviceDef(this);
}

void NavSParser::AdviceDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NavSParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAdviceDef(this);
}

NavSParser::AdviceDefContext* NavSParser::adviceDef() {
  AdviceDefContext *_localctx = _tracker.createInstance<AdviceDefContext>(_ctx, getState());
  enterRule(_localctx, 8, NavSParser::RuleAdviceDef);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    dynamic_cast<AdviceDefContext *>(_localctx)->locEContext = locE(0);

            _localctx->a.first = dynamic_cast<AdviceDefContext *>(_localctx)->locEContext->e_;
        
    setState(78);
    match(NavSParser::LBRACE);
    setState(79);
    dynamic_cast<AdviceDefContext *>(_localctx)->stmtListContext = stmtList();

            _localctx->a.second = make_pair(dynamic_cast<AdviceDefContext *>(_localctx)->stmtListContext->a, (dynamic_cast<AdviceDefContext *>(_localctx)->stmtListContext != nullptr ? _input->getText(dynamic_cast<AdviceDefContext *>(_localctx)->stmtListContext->start, dynamic_cast<AdviceDefContext *>(_localctx)->stmtListContext->stop) : nullptr));
        
    setState(81);
    match(NavSParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LocEContext ------------------------------------------------------------------

NavSParser::LocEContext::LocEContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NavSParser::LocTypeContext* NavSParser::LocEContext::locType() {
  return getRuleContext<NavSParser::LocTypeContext>(0);
}

tree::TerminalNode* NavSParser::LocEContext::LPAREN() {
  return getToken(NavSParser::LPAREN, 0);
}

tree::TerminalNode* NavSParser::LocEContext::RPAREN() {
  return getToken(NavSParser::RPAREN, 0);
}

tree::TerminalNode* NavSParser::LocEContext::IDENTIFIER() {
  return getToken(NavSParser::IDENTIFIER, 0);
}

NavSParser::LiteralContext* NavSParser::LocEContext::literal() {
  return getRuleContext<NavSParser::LiteralContext>(0);
}

tree::TerminalNode* NavSParser::LocEContext::NOT() {
  return getToken(NavSParser::NOT, 0);
}

std::vector<NavSParser::LocEContext *> NavSParser::LocEContext::locE() {
  return getRuleContexts<NavSParser::LocEContext>();
}

NavSParser::LocEContext* NavSParser::LocEContext::locE(size_t i) {
  return getRuleContext<NavSParser::LocEContext>(i);
}

tree::TerminalNode* NavSParser::LocEContext::AND() {
  return getToken(NavSParser::AND, 0);
}

tree::TerminalNode* NavSParser::LocEContext::OR() {
  return getToken(NavSParser::OR, 0);
}


size_t NavSParser::LocEContext::getRuleIndex() const {
  return NavSParser::RuleLocE;
}

void NavSParser::LocEContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NavSParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLocE(this);
}

void NavSParser::LocEContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NavSParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLocE(this);
}


NavSParser::LocEContext* NavSParser::locE() {
   return locE(0);
}

NavSParser::LocEContext* NavSParser::locE(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  NavSParser::LocEContext *_localctx = _tracker.createInstance<LocEContext>(_ctx, parentState);
  NavSParser::LocEContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 10;
  enterRecursionRule(_localctx, 10, NavSParser::RuleLocE, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(101);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case NavSParser::FUNC:
      case NavSParser::DEF:
      case NavSParser::AUSE:
      case NavSParser::PUSE:
      case NavSParser::CUSE:
      case NavSParser::OUSE:
      case NavSParser::LUSE:
      case NavSParser::CALL: {
        setState(84);
        dynamic_cast<LocEContext *>(_localctx)->locTypeContext = locType();
        string id="null";
        setState(86);
        match(NavSParser::LPAREN);
        setState(92);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
          case NavSParser::IDENTIFIER: {
            setState(87);
            dynamic_cast<LocEContext *>(_localctx)->identifierToken = match(NavSParser::IDENTIFIER);
            id=(dynamic_cast<LocEContext *>(_localctx)->identifierToken != nullptr ? dynamic_cast<LocEContext *>(_localctx)->identifierToken->getText() : "");
            break;
          }

          case NavSParser::BOOL_LITERAL:
          case NavSParser::DECIMAL_LITERAL:
          case NavSParser::FLOAT_LITERAL:
          case NavSParser::CHAR_LITERAL:
          case NavSParser::STRING_LITERAL: {
            setState(89);
            dynamic_cast<LocEContext *>(_localctx)->literalContext = literal();
            id=(dynamic_cast<LocEContext *>(_localctx)->literalContext != nullptr ? _input->getText(dynamic_cast<LocEContext *>(_localctx)->literalContext->start, dynamic_cast<LocEContext *>(_localctx)->literalContext->stop) : nullptr);
            break;
          }

        default:
          throw NoViableAltException(this);
        }
        setState(94);
        match(NavSParser::RPAREN);

                string tmp = (dynamic_cast<LocEContext *>(_localctx)->locTypeContext != nullptr ? _input->getText(dynamic_cast<LocEContext *>(_localctx)->locTypeContext->start, dynamic_cast<LocEContext *>(_localctx)->locTypeContext->stop) : nullptr) + "_" + id;
                dynamic_cast<LocEContext *>(_localctx)->e_ =  PredManager::insert_pred(tmp);
            
        break;
      }

      case NavSParser::NOT: {
        setState(97);
        match(NavSParser::NOT);
        setState(98);
        dynamic_cast<LocEContext *>(_localctx)->e = locE(1);

                z3::expr e = (!PredManager::get(dynamic_cast<LocEContext *>(_localctx)->e->e_)).simplify();
                dynamic_cast<LocEContext *>(_localctx)->e_ =  PredManager::insert_expr(e);
            
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(115);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(113);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<LocEContext>(parentContext, parentState);
          _localctx->e1 = previousContext;
          pushNewRecursionContext(_localctx, startState, RuleLocE);
          setState(103);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(104);
          match(NavSParser::AND);
          setState(105);
          dynamic_cast<LocEContext *>(_localctx)->e2 = locE(4);

                            z3::expr e = (PredManager::get(dynamic_cast<LocEContext *>(_localctx)->e1->e_) && PredManager::get(dynamic_cast<LocEContext *>(_localctx)->e2->e_)).simplify();
                            dynamic_cast<LocEContext *>(_localctx)->e_ =  PredManager::insert_expr(e);
                        
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<LocEContext>(parentContext, parentState);
          _localctx->e3 = previousContext;
          pushNewRecursionContext(_localctx, startState, RuleLocE);
          setState(108);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(109);
          match(NavSParser::OR);
          setState(110);
          dynamic_cast<LocEContext *>(_localctx)->e4 = locE(3);

                            z3::expr e = (PredManager::get(dynamic_cast<LocEContext *>(_localctx)->e1->e_) || PredManager::get(dynamic_cast<LocEContext *>(_localctx)->e2->e_)).simplify();
                            dynamic_cast<LocEContext *>(_localctx)->e_ =  PredManager::insert_expr(e);
                        
          break;
        }

        default:
          break;
        } 
      }
      setState(117);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- StmtListContext ------------------------------------------------------------------

NavSParser::StmtListContext::StmtListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<NavSParser::ExprContext *> NavSParser::StmtListContext::expr() {
  return getRuleContexts<NavSParser::ExprContext>();
}

NavSParser::ExprContext* NavSParser::StmtListContext::expr(size_t i) {
  return getRuleContext<NavSParser::ExprContext>(i);
}

std::vector<tree::TerminalNode *> NavSParser::StmtListContext::SEMI() {
  return getTokens(NavSParser::SEMI);
}

tree::TerminalNode* NavSParser::StmtListContext::SEMI(size_t i) {
  return getToken(NavSParser::SEMI, i);
}


size_t NavSParser::StmtListContext::getRuleIndex() const {
  return NavSParser::RuleStmtList;
}

void NavSParser::StmtListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NavSParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmtList(this);
}

void NavSParser::StmtListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NavSParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmtList(this);
}

NavSParser::StmtListContext* NavSParser::stmtList() {
  StmtListContext *_localctx = _tracker.createInstance<StmtListContext>(_ctx, getState());
  enterRule(_localctx, 12, NavSParser::RuleStmtList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(124);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << NavSParser::NOT)
      | (1ULL << NavSParser::LPAREN)
      | (1ULL << NavSParser::BOOL_LITERAL)
      | (1ULL << NavSParser::DECIMAL_LITERAL)
      | (1ULL << NavSParser::FLOAT_LITERAL)
      | (1ULL << NavSParser::CHAR_LITERAL)
      | (1ULL << NavSParser::STRING_LITERAL)
      | (1ULL << NavSParser::IDENTIFIER)
      | (1ULL << NavSParser::ARG))) != 0)) {
      setState(118);
      dynamic_cast<StmtListContext *>(_localctx)->exprContext = expr(0);

              _localctx->a.insert(dynamic_cast<StmtListContext *>(_localctx)->exprContext->a.begin(), dynamic_cast<StmtListContext *>(_localctx)->exprContext->a.end());
          
      setState(120);
      match(NavSParser::SEMI);
      setState(126);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprListContext ------------------------------------------------------------------

NavSParser::ExprListContext::ExprListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<NavSParser::ExprContext *> NavSParser::ExprListContext::expr() {
  return getRuleContexts<NavSParser::ExprContext>();
}

NavSParser::ExprContext* NavSParser::ExprListContext::expr(size_t i) {
  return getRuleContext<NavSParser::ExprContext>(i);
}

std::vector<tree::TerminalNode *> NavSParser::ExprListContext::COMMA() {
  return getTokens(NavSParser::COMMA);
}

tree::TerminalNode* NavSParser::ExprListContext::COMMA(size_t i) {
  return getToken(NavSParser::COMMA, i);
}


size_t NavSParser::ExprListContext::getRuleIndex() const {
  return NavSParser::RuleExprList;
}

void NavSParser::ExprListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NavSParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExprList(this);
}

void NavSParser::ExprListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NavSParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExprList(this);
}

NavSParser::ExprListContext* NavSParser::exprList() {
  ExprListContext *_localctx = _tracker.createInstance<ExprListContext>(_ctx, getState());
  enterRule(_localctx, 14, NavSParser::RuleExprList);
  size_t _la = 0;
